--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^6.10.0",
     "moongoose": "^0.0.5",
     "multer": "^1.4.5-lts.1",
-    "node": "^20.1.0",
+    "node": "^20.2.0",
+    "nvm": "^0.0.4",
     "react-file-base64": "^1.0.3",
     "react-s3": "^1.3.1",
     "react-toastify": "^9.1.2",
